Updating tests for Azure VM and JDK13 with ZGC